--- a/.github/workflows/run_dataset_generation.yaml
+++ b/.github/workflows/run_dataset_generation.yaml
@@ -25,7 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install .
-      - name: Run data generation
+      - name: Run dataset generation
         run: |
           python tests/generate_benchmark_tables.py
       - name: Upload artifact
