--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,12 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyspi"
-version = "1.1.1"
+name = "pyss"
+version = "1.0.1"
 authors = [
-    { name ="Oliver M. Cliff", email="oliver.m.cliff@gmail.com"},
+    { name ="Garry Cotton", email="garry.s.cotton@gmail.com"},
 ]
-maintainers = [
-    {name = "Joshua B. Moore"},
-    {email = "joshua.moore@sydney.edu.au"},
-]
-description = "Library for pairwise analysis of time series dataset."
+description = "Library for generating large volumes of statistical summaries on static datasets."
 readme = "README.md"
 license = {text = "GNU General Public License v3 (GPLv3)"}
 requires-python = ">=3.8"
@@ -32,5 +28,8 @@ classifiers = [
 dynamic = ["dependencies", "optional-dependencies"]
 
 [project.urls]
-Homepage = "https://github.com/DynamicsAndNeuralSystems/pyspi"
-Documentation = "https://time-series-features.gitbook.io/pyspi/"
+
+
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.2,<4"]
