--- a/pyss/run_config/test_rstatistic.yaml
+++ b/pyss/run_config/test_rstatistic.yaml
@@ -6,3 +6,11 @@ ReducedStatistics:
           components:
             - 2
             - 4
+
+    PCAEigenVectors:
+      schemes:
+        std:
+          principal_vectors:
+            - 1
+            - 3
+            
