--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -25,4 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools
           pip install -r requirements.txt
-#          pip install .
+          pip install .
