--- a/.github/workflows/windows_unit_tests copy.yaml
+++ b/.github/workflows/windows_unit_tests copy.yaml
@@ -11,11 +11,10 @@ on:
 
 jobs:
   test-ubuntu:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
       - name: Setup python ${{ matrix.python-version }}
@@ -23,10 +22,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-      - name: Install octave
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential octave
       - name: Install pyss dependencies
         run: |
           python -m pip install --upgrade pip
