--- a/pyss/run_config/fabfour.yaml
+++ b/pyss/run_config/fabfour.yaml
@@ -1,54 +1,43 @@
+Statistics:
 # Pearson and Spearman correlation statistics
-.statistics.basic:
-  # Covariance
-  Covariance:
-    labels:
-      - undirected
-      - nonlinear
-      - unisgned
-      - bivariate
-      - contemporaneous
-    dependencies:
-    configs:
-      - estimator: EmpiricalCovariance
+  pyss.statistics.basic:
+    # Covariance
+    Covariance:
+      schemes:
+        std:
+          estimator: EmpiricalCovariance
 
   # Spearman's correlation coefficient
-  SpearmanR:
-    labels:
-      - undirected
-      - nonlinear
-      - signed
-      - bivariate
-      - contemporaneous
-    dependencies:
-    configs:
-      - squared: True
+    SpearmanR:
+      schemes:
+        sq:
+          squared: True
 
 # Directed information with a Gaussian density estimator
-.statistics.infotheory:
-  DirectedInfo:
-    labels:
-      - directed
-      - nonlinear
-      - unsigned
-      - bivariate
-      - time-dependent
-    dependencies:
-      - java
-    configs:
-      - estimator: gaussian
+  pyss..statistics.misc:
+    LinearModel:    
+      schemes:
+        gaussian:
+          estimator: gaussian
 
 # Power envelope correlation
-.statistics.misc:
-  PowerEnvelopeCorrelation:
-    labels:
-      - undirected
-      - linear
-      - unsigned
-      - bivariate
-      - time-dependent
-    dependencies:
-    configs:
-      - orth: False
-        log: False
-        absolute: False
+    PowerEnvelopeCorrelation:
+      schemes:
+        std:    
+          orth: False
+          log: False
+          absolute: False
+
+Reducers:
+  pyss.reducers.basic:
+    SingularValues:
+      schemes:
+        four:
+          num_values: 4
+
+
+  pyss.reducers.norms:
+    SchattenNorm:
+      schemes:
+        p-4:
+          p: 4
