MacOS Unit Testing - Attempt 1

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,17 @@ pandas
 statsmodels
 pyyaml
 tqdm
-nitime
+#nitime
 hyppo
-pyEDM==1.15.2.0
+#pyEDM==1.15.2.0
 jpype1
-sktime
+#sktime
 dill
 spectral-connectivity
 torch
 cdt==0.5.23
 oct2py
-tslearn
+#tslearn
 mne==0.23.0
 seaborn
 future
