update yamls to reflect name change, add env yaml and some dev info

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,12 @@ readme.html
 venv
 img
 tests
-pyss/statistics/wip
+pyspoc/statistics/wip
 README.md.bak
+
+.env
+*.egg-info/
+*.ipynb_checkpoints/
+.envrc
+
+notes_todos.md
