--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-pytest
-h5py
-scikit-learn
-scipy
-numpy<2.0.0
-pandas
-statsmodels
-pyyaml
-tqdm
-#nitime
-hyppo
-#pyEDM==1.15.2.0
-jpype1
-#sktime
-dill
-spectral-connectivity
-torch
-cdt==0.5.23
-oct2py
-#tslearn
-mne==0.23.0
-seaborn
-future
+# pytest
+# h5py
+# scikit-learn
+# scipy
+# numpy<2.0.0
+# pandas
+# statsmodels
+# pyyaml
+# tqdm
+# #nitime
+# hyppo
+# #pyEDM==1.15.2.0
+# jpype1
+# #sktime
+# dill
+# spectral-connectivity
+# torch
+# cdt==0.5.23
+# oct2py
+# #tslearn
+# mne==0.23.0
+# seaborn
+# future
