--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["pyspoc"]
+include = ["pyspoc*"]
 
 [project]
 name = "pyspoc"
@@ -58,6 +58,7 @@ notebooks = [
   "jupyter",
   "ipykernel",
   "matplotlib",
+  "nb_conda_kernels"
 ]
 
 # optionally:   "nbstripout"
